# agent_loom

./: .env.example  .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
apps/mcp-server/: README.md  package.json  tsconfig.json
apps/mcp-server/src/: index.ts  server.ts
apps/mcp-server/src/auth/: oauth.ts
apps/mcp-server/src/tools/: proxy-tool.ts  registry.ts  soroswap-aggregator-tool.ts  soroswap-tool.ts  stellar-agent-tools.ts  workflow-tool.ts
apps/web/: README.md  next.config.ts  package.json  postcss.config.mjs  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/explore/: page.tsx
apps/web/app/mcp-servers/: page.tsx
apps/web/app/proxies/: page.tsx
apps/web/context/: user.tsx
apps/web/hooks/: useScrollAnimation.ts
apps/web/lib/: isUuid.ts
apps/web/scripts/: soroswap-testnet-swap.ts
contracts/: Cargo.toml  README.md  rust-toolchain.toml
contracts/loom-session/: Cargo.toml
contracts/loom-session/src/: lib.rs
docs/: ARCHITECTURE_MAPPING.md  PHASE_0_PLAN.md  PHASE_1_SETUP.md  PHASE_2_DATA_LAYER.md  PHASE_3_AUTH.md  PHASE_4_STELLAR_AUTH.md  PHASE_5_PAID_PROXY.md  PHASE_6_MCP.md  PHASE_6_MCP_SMOKE_TEST.md  PHASE_7_WORKFLOWS.md  SOROSWAP_SWAP.md  STELLAR_STACK_DECISIONS.md
tooling/: phase6-mcp-smoke.ts  phase7-live-workflow-verify-testnet.ts
tooling/typescript/: base.json
workers/stellar-trending/: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
workers/stellar-trending/src/: horizonTrending.ts  index.ts
(+140 files in other folders)
